<resources>
    <string name="app_name">EasyFree</string>
    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">Signup or Signin by email</string>
    <string name="signin_google">Google login</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>
    <string name="password_check">Check Password</string>
    <string name="home">home</string>
    <string name="id_check">Check ID</string>
    <string name="upload_success">Success!</string>
    <string name="signup_check">Sign Up</string>
    <string name="signup_text">SignUp</string>
    <string name="login_text">Login</string>
    <string name="camera">Camera</string>
    <string name="shopping_basket">Basket</string>
    <string name="hint_image_content">Image Description</string>
    <string name="displayName">Display Name</string>
    <string name="message_progress">message</string>
    <string name="signup_url">http://54.180.153.44:3003/auth/register</string>
    <string name="server_test">http://54.180.153.44:3003/welcome</string>
    <string name="login_url">http://54.180.153.44:3003/auth/login</string>
    <string name="product_url">http://54.180.153.44:3003/product/</string>
    <string name="purchase_url">http://54.180.153.44:3003/purchase</string>
    <string name="model_url">http://54.180.153.44:3003/model</string>
    <string name="price_text">Total Price</string>
    <string name="order_btn">Order</string>
    <string name="delete_item">Delete Item</string>
</resources>