<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/basket_top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <Button
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:id="@+id/check_all_btn"/>
        <TextView
            android:layout_weight="4"
            android:text="전체선택 0/1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"/>
        <Button
            android:layout_weight="1"
            android:text="@string/delete_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/delete_item_btn"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/basket_top_bar"
        android:id="@+id/basketviewfragment_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_frame"/>
    <FrameLayout
        android:id="@+id/bottom_frame"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/total_price_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/price_text"/>
                <TextView
                    android:text="0"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/total_price_value_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <Button
                android:id="@+id/order_to_server_btn"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/order_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>